--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:front": "parcel build ./front-src/index.html",
     "build:back": "tsc",
     "build": "yarn build:front && yarn build:back",
-    "start": "node ./back-dist/developing.js"
+    "start": "node ./back-dist/index.js"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
